# lwa_simple_server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  main.rs
