[package]
name = "lwa_simple_server"
version = "0.1.0"
authors = ["Mev Lyshkin <mev_lyshkin@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Leinnan/lwa_simple_server"
homepage = "https://github.com/Leinnan/lwa_simple_server"
readme = "README.md"
license = "MIT"
keywords = ["server", "static", "single-page", "https"]
categories = ["command-line-utilities", "development-tools"]
description = "Simple server made with hosting locally webgl games in mind."
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
actix-web = { version = "4.4", features = ["openssl"] }
openssl = { version = "0.10" }
actix-files = "^0.6"
actix-cors = "^0.6"
env_logger = "^0.10"
serde = "^1.0"
serde_derive = "^1.0"
clap = { version = "^4.4", features = ["derive"] }
